# world-id-sdk

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/workflows/: publish.yml
